fixed docs nav spacing on mobile

--- a/_sass/_docs.scss
+++ b/_sass/_docs.scss
@@ -20,7 +20,6 @@
 
 		.content {
 			max-width: 800px;
-			padding: 0 25px;
 			margin: 20px auto 1.75em auto;
 		}
 	}
@@ -28,7 +27,7 @@
 	@media (min-width: 800px) {
 		.docs-nav,
 		.docs-main {
-			padding: 20px 0;
+			padding: 20px;
 		}
 
 		.docs-nav {
